--- a/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
+++ b/Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
    "execution_count": 5,
-=======
-   "execution_count": 4,
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Translated to .py by Meritxell Pacheco\n",
-    "# 2017\n",
-    "# Adapted to PandasBiogeme by Michel Bierlaire\n",
-    "# Sun Oct 21 23:15:31 2018\n",
-    "\n",
-    "import os \n",
+    "import os, glob\n",
     "\n",
     "import pandas as pd\n",
     "import biogeme.database as db\n",
@@ -29,10 +20,6 @@
     "\n",
     "globals().update(database.variables)\n",
     "\n",
-    "# Exclude\n",
-    "# exclude = (  ArrivalTimeHours_1   ==  -1  )\n",
-    "# database.remove(exclude)\n",
-    "  \n",
     "# Choice\n",
     "chosenAlternative = travel_mode"
    ]
@@ -41,16 +28,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data, Parameters to estimate"
+    "## 1. Data and Parameters to estimate"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
    "execution_count": 6,
-=======
-   "execution_count": 5,
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,28 +63,19 @@
     "Time_Age_1 = Beta('Time_Age_1', 0, None, None, 0)\n",
     "Time_Age_2 = Beta('Time_Age_2', 0, None, None, 0)\n",
     "Time_Age_3 = Beta('Time_Age_3', 0, None, None, 0)\n",
-    "Time_Age_4 = Beta('Time_Age_4', 0, None, None, 0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Define here arithmetic expressions for name that are not directly\n",
-    "# available from the data"
+    "Time_Age_4 = Beta('Time_Age_4', 0, None, None, 0)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Variables, Utility Functions"
+    "## 2. Variables and Utility Functions"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
    "execution_count": 7,
-=======
-   "execution_count": 6,
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,13 +92,14 @@
     "\n",
     "Opt1 = Constant1 + Total_TT1 * dur_walking + Time_Age_1 * dur_walking * age\n",
     "Opt2 = Constant2 + Total_TT2 * dur_cycling + CarOwn_2 * car_ownership + Time_Age_2 * dur_cycling * age\n",
-    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + CarOwn_3 * car_ownership +  Time_Age_3 * dur_public * age\n",
+    "Opt3 = Constant3 + Cost * cost_public + Total_TT3 * dur_public + CarOwn_3 * car_ownership +\\\n",
+    "                    Time_Age_3 * dur_public * age\n",
     "Opt4 = Constant4 + Cost * cost_driving + Total_TT4 * dur_driving + CarOwn_4 * car_ownership +\\\n",
     "                    Time_Age_4 * dur_driving * age\n",
     "\n",
     "\n",
-    "V = {1: Opt1,2: Opt2,3: Opt3,4: Opt4}\n",
-    "av = {1: 1,2: 1,3: 1,4: 1}"
+    "V = {1: Opt1, 2: Opt2, 3: Opt3, 4: Opt4}\n",
+    "av = {1: 1, 2: 1, 3: 1, 4: 1}"
    ]
   },
   {
@@ -136,55 +111,18 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
    "execution_count": 8,
-=======
-   "execution_count": 7,
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             Value  Std err  t-test  p-value  Rob. Std err  Rob. t-test  \\\n",
-      "CarOwn_2    -0.195    0.138   -1.42    0.156         0.144        -1.35   \n",
-      "CarOwn_3    -0.589   0.0771   -7.64 2.13e-14        0.0784        -7.51   \n",
-      "CarOwn_4      1.11   0.0722    15.4        0        0.0698         15.9   \n",
-      "Constant2    -4.51      0.2   -22.6        0         0.233        -19.3   \n",
-      "Constant3    -1.99    0.129   -15.4        0         0.157        -12.6   \n",
-      "Constant4    -3.14    0.135   -23.3        0         0.167        -18.8   \n",
-      "Cost        -0.165   0.0168   -9.82        0        0.0176        -9.38   \n",
-      "Time_Age_1 -0.0584  0.00935   -6.24 4.28e-10        0.0104        -5.62   \n",
-      "Time_Age_2 -0.0321   0.0214    -1.5    0.133        0.0226        -1.42   \n",
-      "Time_Age_3 -0.0362   0.0121      -3  0.00267        0.0133        -2.72   \n",
-      "Time_Age_4 -0.0437   0.0208    -2.1   0.0357        0.0243         -1.8   \n",
-      "Total_TT1    -6.08    0.425   -14.3        0         0.604        -10.1   \n",
-      "Total_TT2    -4.42    0.919    -4.8 1.55e-06         0.975        -4.53   \n",
-      "Total_TT3    -1.87    0.515   -3.63 0.000286         0.572        -3.27   \n",
-      "Total_TT4    -4.68    0.864   -5.42 6.07e-08          1.03        -4.54   \n",
-      "\n",
-      "            Rob. p-value  \n",
-      "CarOwn_2           0.176  \n",
-      "CarOwn_3        5.71e-14  \n",
-      "CarOwn_4               0  \n",
-      "Constant2              0  \n",
-      "Constant3              0  \n",
-      "Constant4              0  \n",
-      "Cost                   0  \n",
-      "Time_Age_1       1.9e-08  \n",
-      "Time_Age_2         0.156  \n",
-      "Time_Age_3       0.00653  \n",
-      "Time_Age_4        0.0725  \n",
-      "Total_TT1              0  \n",
-      "Total_TT2       5.88e-06  \n",
-      "Total_TT3        0.00108  \n",
-      "Total_TT4       5.72e-06  \n",
       "Nbr of observations: 5000\n",
       "LL(0) =    -6931.472\n",
       "LL(beta) = -3727.612\n",
       "rho bar square = 0.46\n",
-      "Output file: ./model2-output/logit_lpmc_model2_time~00.html\n"
+      "Output file: ./model2-output/logit_lpmc_model2_CarOwn+Age.html\n"
      ]
     },
     {
@@ -226,7 +164,7 @@
        "      <td>0.156</td>\n",
        "      <td>0.144</td>\n",
        "      <td>-1.35</td>\n",
-       "      <td>0.176</td>\n",
+       "      <td>0.175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CarOwn_3</th>\n",
@@ -293,7 +231,7 @@
        "      <td>-0.0584</td>\n",
        "      <td>0.00935</td>\n",
        "      <td>-6.24</td>\n",
-       "      <td>4.28e-10</td>\n",
+       "      <td>4.27e-10</td>\n",
        "      <td>0.0104</td>\n",
        "      <td>-5.62</td>\n",
        "      <td>1.9e-08</td>\n",
@@ -381,7 +319,7 @@
        "Constant3    -1.99    0.129   -15.4        0         0.157        -12.6   \n",
        "Constant4    -3.14    0.135   -23.3        0         0.167        -18.8   \n",
        "Cost        -0.165   0.0168   -9.82        0        0.0176        -9.38   \n",
-       "Time_Age_1 -0.0584  0.00935   -6.24 4.28e-10        0.0104        -5.62   \n",
+       "Time_Age_1 -0.0584  0.00935   -6.24 4.27e-10        0.0104        -5.62   \n",
        "Time_Age_2 -0.0321   0.0214    -1.5    0.133        0.0226        -1.42   \n",
        "Time_Age_3 -0.0362   0.0121      -3  0.00267        0.0133        -2.72   \n",
        "Time_Age_4 -0.0437   0.0208    -2.1   0.0357        0.0243         -1.8   \n",
@@ -391,7 +329,7 @@
        "Total_TT4    -4.68    0.864   -5.42 6.07e-08          1.03        -4.54   \n",
        "\n",
        "            Rob. p-value  \n",
-       "CarOwn_2           0.176  \n",
+       "CarOwn_2           0.175  \n",
        "CarOwn_3        5.71e-14  \n",
        "CarOwn_4               0  \n",
        "Constant2              0  \n",
@@ -408,21 +346,21 @@
        "Total_TT4       5.72e-06  "
       ]
      },
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
      "execution_count": 8,
-=======
-     "execution_count": 7,
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "output_dir = \"./model2-output\"\n",
-    "filepath = os.path.join(output_dir, \"logit_lpmc_model2_time\")\n",
+    "filepath = os.path.join(output_dir, \"logit_lpmc_model2_CarOwn+Age\")\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)\n",
     "    \n",
+    "# delete previously saved html and pickle\n",
+    "for file in glob.glob(f\"{filepath}*\"):\n",
+    "    os.remove(file)\n",
+    "\n",
     "# The choice model is a logit, with availability conditions\n",
     "logprob = loglogit(V,av,chosenAlternative)\n",
     "biogeme  = bio.BIOGEME(database,logprob)\n",
@@ -430,7 +368,7 @@
     "results = biogeme.estimate()\n",
     "# Get the results in a pandas table\n",
     "pandasResults = results.getEstimatedParameters()\n",
-    "print(pandasResults)\n",
+    "\n",
     "print(f\"Nbr of observations: {database.getNumberOfObservations()}\")\n",
     "print(f\"LL(0) =    {results.data.initLogLike:.3f}\")\n",
     "print(f\"LL(beta) = {results.data.logLike:.3f}\")\n",
@@ -444,20 +382,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
     "#### Let's compare this model with the previous one developped (Model 1)\n",
     "\n",
     "In order to compare the two models, we take this one as the unrestricted model, and Model 1 is the restricted one. Model 1 produces 8 estimates while Model 2 produces 15. Thus we have to compare our test statistic with the chi squared ditribution with 7 degrees of freedom $\\chi^2_{7}$ \n"
-=======
-    "#### Let's compare this model with the previous one developped (Model1) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to compare the two models, we take this one as the unrestricted model, and Model1 is the restricted one. Model 1 produces 8 estimates while Model 2 produces 15. Thus we have to compare our test statistic with the chi squared ditribution with 7 degrees of freedom $\\chi^2_{7}$ ."
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    ]
   },
   {
@@ -468,11 +395,7 @@
     {
      "data": {
       "text/plain": [
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
        "1091.9213887672895"
-=======
-       "1091.921392016602"
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
       ]
      },
      "execution_count": 9,
@@ -481,11 +404,7 @@
     }
    ],
    "source": [
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
     "LLModel_1 = -4273.573 # result copied from Model 1's notebook\n",
-=======
-    "LLModel_1 = -4273.573\n",
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
     "- 2 *(LLModel_1 - results.data.logLike)"
    ]
   },
@@ -493,33 +412,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD:Project-1/LPMC_model2_CarOwn+SocioEconWithTime .ipynb
-    "2 *(LLModel_2 - LLModel1) = 1091.921 > $\\chi^2_{7,0.99}$ = 18.475\n",
+    "$$2 (LLModel_2 - LLModel_1) = 1091.921 > \\chi^2_{7,0.99} = 18.475$$\n",
     "\n",
     "Thus we can reject Model1 at 99% level of confidence, and we keep Model2 as our new preferred model.\n"
    ]
   },
   {
-=======
-    "- 2 *(LLModel_2 - LLModel_1) = 1091.921 > $\\chi^2_{7,0.99}$ = 18.475"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Thus we can reject Model1 at 99% level of confidence, and we keep Model2 as our new preferred model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
->>>>>>> 9202b5f20ebdd4b1a3d642c60087101b2586f26d:Project-1/LPMC_model2_CarOwn+SocioEconWithTime.ipynb
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -529,9 +427,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "biogeme_py_kernel",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "biogeme_py_kernel"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -543,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
