--- a/Project-1/LPMC_model3.ipynb
+++ b/Project-1/LPMC_model3.ipynb
@@ -1101,7 +1101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\textbf{2 *(LLModel_2_2 - LLModel2) = 135.416 > $\\chi^2_{1,0.99}$ = 6.63}$$\n",
+    "$$2 (LLModel_{22} - LLModel_2) = 135.416 > \\chi^2_{1,0.99} = 6.63$$\n",
+    "\n",
     "\n",
     "Thus we can reject Model2 at 99% level of confidence, and we keep Model2.2 as our new preferred model.\n",
     "Let's compare Model2.3 with Model 2.2\n",
