--- a/Project-2/As2Ex3.ipynb
+++ b/Project-2/As2Ex3.ipynb
@@ -14,8 +14,7 @@
     "from biogeme.expressions import Beta, DefineVariable\n",
     "from biogeme.models import logit, loglogit, piecewiseFormula, nested\n",
     "from biogeme.models import lognested\n",
-    "from biogeme.results import bioResults, pickle\n",
-    "from biogeme.results import "
+    "from biogeme.results import bioResults, pickle"
    ]
   },
   {
